# blauw_zwart_pipeline

./: .dockerignore  .env.example  .gitattributes  .gitignore  .impeccable.md  README.md  TODO.md  dbt_project.yml  docker-compose.yml  justfile  match_day.example.json  pyproject.toml  selectors.yml  skills-lock.json
.agents/skills/domain-driven-development-codegen/: SKILL.md
.agents/skills/i-animate/: SKILL.md
.agents/skills/i-bolder/: SKILL.md
.agents/skills/i-colorize/: SKILL.md
.agents/skills/i-critique/: SKILL.md
.agents/skills/i-delight/: SKILL.md
.agents/skills/i-distill/: SKILL.md
.agents/skills/i-impeccable/: SKILL.md
.agents/skills/i-overdrive/: SKILL.md
.agents/skills/i-quieter/: SKILL.md
.agents/skills/i-shape/: SKILL.md
.cursor/agents/: prompt-engineer.md  software-architect.md
.cursor/rules/: logging-common.mdc  post-change-pytest-ruff.mdc  specify-rules.mdc  uv-package-manager.mdc
.github/instructions/: comment_style.instructions.md
.github/workflows/: docker-build.yml  pytest.yml  ruff.yml
.specify/integrations/: cursor-agent.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/templates/: plan-template.md  spec-template.md  tasks-template.md
data/: data-1775932769396.csv
dbt/: README.md  dbt_project.yml  profiles.yml.example
dbt/macros/: log_dbt_results.sql
dbt/models/: sources.yml
dbt/models/marts/: mart_dbt_run_results.sql  mart_fan_loyalty.sql  mart_match_summary.sql  mart_player_season_summary.sql  schema.yml
docker/: Dockerfile.api  Dockerfile.dbt  Dockerfile.frontend-app  Dockerfile.ingest  Dockerfile.scraper  Dockerfile.scraper-ingest  README.md  requirements.scraper-ingest.txt  requirements.scraper.txt
docker/dbt/: run-loop.sh
docker/pgadmin/: servers.json
docker/postgres/init/: 001_fan_events_ingested.sql  002_llm_reader.sql  003_player_stats.sql
docker/producer/: boot-and-stream.sh
docs/: logging.md  player_stats.csv
notebooks/: sql-agent.ipynb
scripts/: generate_fan_events.py  kafka_consume_fan_events.py
specs/001-synthetic-fan-events/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-synthetic-fan-events/checklists/: requirements.md
specs/001-synthetic-fan-events/contracts/: fan-events-ndjson-v1.md
specs/002-match-calendar-events/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-match-calendar-events/checklists/: requirements.md
specs/002-match-calendar-events/contracts/: fan-events-ndjson-v2.md
specs/002-match-calendar-events/fixtures/: calendar_example.json  calendar_three_matches.json
specs/003-ndjson-v3-retail-sim/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-ndjson-v3-retail-sim/checklists/: requirements.md
specs/003-ndjson-v3-retail-sim/contracts/: fan-events-ndjson-v3.md
specs/004-unified-synthetic-stream/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/004-unified-synthetic-stream/checklists/: requirements.md
specs/004-unified-synthetic-stream/contracts/: cli-stream.md  orchestrated-stream.md
specs/005-compose-kafka-pipeline/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/005-compose-kafka-pipeline/checklists/: requirements.md
specs/005-compose-kafka-pipeline/contracts/: ingestion-persistence-v1.md  local-stack-wiring.md
specs/006-stream-three-event-kinds/: data-model.md  plan.md  pr-outline.md  quickstart.md  research.md  spec.md  tasks.md
src/blauw_zwart_fan_sim_pipeline/: __init__.py
src/common/: __init__.py  logging_setup.py
src/fan_events/: README.md  __init__.py  __main__.py  cli.py  domain.py  fan_profiles.py  kafka_sink.py  merge_keys.py  ndjson_io.py  orchestrator.py  retail_intensity.py  term_style.py  v1_batch.py  v2_calendar.py  v3_retail.py
src/fan_events/cli/: __init__.py  main.py  (+1 more)
src/fan_ingest/: README.md  __init__.py  db.py  main.py  records.py  runner.py
src/frontend_app/: README.md  __init__.py  app.py
src/llm_api/: README.md  app.py  llm_runtime_config.py  schema_context.py
src/proleague_ingest/: README.md  __init__.py  consumer.py  main.py
src/proleague_scraper/: README.md  __init__.py  app.py  db.py  scheduler.py  scraper.py
tests/: test_calendar_loop.py  test_calendar_validation.py  test_cli_calendar.py  test_cli_retail.py  test_cli_stream.py  test_data_catalog.py  test_fan_profiles.py  test_frontend_app.py  test_kafka_sink.py  test_llm_api_app.py  test_llm_runtime_config.py  test_logging_setup.py  test_merge_keys.py  test_ndjson_sort.py  test_ndjson_v3_io.py  test_observability.py  test_orchestrator_merge.py  test_proleague_ingest.py  test_proleague_ingest_consumer.py  test_proleague_ingest_main.py  test_proleague_scheduler.py  test_proleague_scraper.py  test_proleague_scraper_app.py  test_proleague_scraper_db.py  test_proleague_scraper_fetch.py  test_retail_intensity_006.py  test_schema_context.py  test_semantic_layer.py  test_sql_agent_database.py  test_sql_agent_graph.py  test_sql_agent_guardrails.py  test_sql_agent_prompts.py  test_sql_agent_providers.py  test_sql_agent_tools.py  test_stream_calendar_loop_006.py  test_stream_match_day_retail_006.py  test_stream_max_duration_t0_006.py  test_stream_max_limits_combo_006.py  test_stream_merge_order_006.py  test_stream_output_paths_006.py  (+9 more)
tests/fan_ingest/: test_db_helpers.py  test_idempotency.py  test_main.py  test_parse_errors.py  test_row_mapping.py  test_runner.py
tests/fixtures/: calendar_three_matches.json  calendar_two_tiny.json  v1_golden_seed1_n10_d30.ndjson
(+55 files in other folders)
