[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "blauw-zwart-fan-sim-pipeline"
version = "0.1.0"
requires-python = ">=3.12"
# IANA time zone database for zoneinfo (required on Windows for Europe/Brussels etc.).
dependencies = ["tzdata>=2024.1"]

[project.optional-dependencies]
# Kafka output for `fan_events stream --kafka-topic`; install with: uv sync --extra kafka
kafka = ["confluent-kafka>=2.3"]
ingest = [
    "asyncpg>=0.29",
    "confluent-kafka>=2.3",
]

[project.scripts]
fan_events = "fan_events.cli:main"
fan_ingest = "fan_ingest.main:main"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.8.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
# Resolved from the repo root; run `uv run pytest` there (or pass `../tests` if invoking from `src/`).
testpaths = ["tests"]
markers = [
    "slow: optional large-batch or long-running tests (e.g. SC-003 retail scale)",
]

[tool.ruff]
line-length = 100
target-version = "py312"
exclude = [".agents", ".cursor", ".git", ".specify", ".venv", "venv"]

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
